added building one basic layout and js

--- a/css/master.css
+++ b/css/master.css
@@ -1,13 +1,47 @@
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  background-color: #000;
+  color: #fff;
+}
+
+.page-title {
+  font-size: 25px;
+  font-weight: bold;
+  margin: 2em 0 1.2em 0;
+  text-align: center;
+}
+
 .campus-image {
   background: url(../satellite_map.png) no-repeat 0 0;
   width: 897px;
   height: 402px;
   margin: 30px auto;
-  border: solid 1px green;
   position: relative;
 }
 
 .campus-image a {
-  /* uncomment to see image maps */
+  /* uncomment to see image maps
   border: solid red 1px;
+  */
+}
+
+.campus-image a:hover {
+  background-color: rgba(251, 255, 174, .5);
+  border-radius: 40px;
+}
+
+.floorplan-config-selecton {
+  text-align: center;
+}
+
+.floorplan-config-selecton label {
+  margin-left: 40px;
+  margin-right: 10px;
+  font-size: 1.4em;
+}
+
+.floorplan-config-selecton button {
+  font-size: 1.4em;
+  margin-left: 20px;
 }
