--- a/css/master.css
+++ b/css/master.css
@@ -3,8 +3,16 @@ body {
   font-size: 14px;
   background-color: #000;
   color: #fff;
+  padding: 0;
 }
 
+.back-to-map {
+  display: block;
+  padding: 5px;
+  color: #fff;
+  background-color: #0eb17a;
+  margin: 0;
+}
 .page-title {
   font-size: 25px;
   font-weight: bold;
@@ -44,4 +52,10 @@ body {
 .floorplan-config-selecton button {
   font-size: 1.4em;
   margin-left: 20px;
+}
+
+.floorplan{
+  margin-top: 50px;
+  width: 100%;
+  height: 1000px;
 }
